<resources>
    <string name="app_name">Mini Project 4</string>
    <string name="action_settings">Settings</string>
    <string name="round" />
    <string name="percentage" />
    <string name="text_for_spinner" />
    <string name="tip" />
    <string name="info_message">Select number of people using spinner to split the tip among friends. If you choose the tip option it will round up the tip.
        If you choose the total option it will round up the total</string>
    <string name="info_title" >info</string>
    <string name="positive_button" />
    <string name="Share" />
    <string name="info" />
    <string name="how_many_to_split">How many to split?</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="each_pay">Each Pay</string>
    <string name="split_amount">Split Amount</string>
    <string name="tip_only">Tip Only</string>
    <string name="round_up">Round Up?</string>
    <string name="tip2">Tip</string>
</resources>
